--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ perl:
  - "5.20"
  - "5.22"
  - "5.24"
+ - "5.18-shrplib"
+ - "5.20-shrplib"
+ - "5.22-shrplib"
+ - "5.24-shrplib"
 
 env:
  - RELEASE_TESTING=1 NETWORK_TESTING=1 AUTOMATED_TESTING=1
@@ -36,7 +40,8 @@ install:
  - dzil listdeps --missing | cpanm --quiet --notest
 
 script:
- - dzil cover -ignore_re ^deps -ignore_re CORE -ignore_re ^const -ignore_re curl -test -report coveralls
+ - if [[ ! $TRAVIS_PERL_VERSION =~ "shrplib" ]]; then dzil cover -ignore_re ^deps -ignore_re CORE -ignore_re ^const -ignore_re curl -test -report coveralls; fi
+ - if [[ $TRAVIS_PERL_VERSION =~ "shrplib" ]]; then dzil test; fi
 
 notifications:
   email:
