dist.ini: require perl 5.8 for configure

--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ repo      = p5-ZMQ-Raw
 makemaker = 0
 
 [Prereqs / ConfigureRequires]
+perl = 5.008
 ExtUtils::MakeMaker = 6.63_03
 
 [Prereqs / TestRequires]
