--- a/Makefile.am
+++ b/Makefile.am
@@ -307,6 +307,11 @@ src_libzmq_la_CPPFLAGS += ${pgm_CFLAGS}
 src_libzmq_la_LIBADD += ${pgm_LIBS}
 endif
 
+if HAVE_NORM
+src_libzmq_la_CPPFLAGS += ${norm_CFLAGS}
+src_libzmq_la_LIBADD += ${norm_LIBS}
+endif
+
 if BUILD_GSSAPI
 src_libzmq_la_CPPFLAGS += ${gssapi_krb5_CFLAGS}
 src_libzmq_la_LIBADD += ${gssapi_krb5_LIBS}
