Squashed 'deps/libzmq/' changes from cb266ee07..737ea1f60
737ea1f60 Merge pull request #2856 from scpeters/patch-1
de5e7a398 Problem: WIN32 CMAKECONFIG_INSTALL_DIR is broken
d15795b4e Merge pull request #2852 from bluca/pkg_include_cppzmq
dee655959 Merge pull request #2853 from jimklimov/jf
83c042ccd Problem: Debian packages are missing zmq.hpp
f90dbe08b Introduce Jenkinsfile
fcacb603d Merge pull request #2851 from bluca/zpoller_wait_news
156633fea Problem: DRAFT API change not in NEWS
d8aa8fc79 Merge pull request #2846 from bluca/appveyor_vs2013
a88abaa57 Merge pull request #2848 from bluca/linger_news
e3cbdf4b9 Problem: ZMQ_LINGER doc change not in NEWS
90ea11c99 Merge pull request #2847 from fnaime/default_linger
da9bc9105 Wrong ZMQ_LINGER default value
96252e4aa Problem: Appveyor builds Libsodium when disabled
16d7686b4 Problem: no VS2013/17 CI jobs
9f83a5988 Merge pull request #2844 from bluca/cmake_double_build
574d72b0e Problem: Travis builds with brew fail
08289d8f3 Problem: cannot disable Werror with autoconf
0298d037d Problem: CMake rebuilds everything twice
5264d49ea Problem: duplicate definition in CMake tweetnacl builds
b3bf51716 Merge pull request #2842 from bluca/accept4
ac552ba44 Problem: accept4 not available on all platforms
0d0d72e83 Merge pull request #2841 from bluca/news
5a8fd337f Problem: NEWS not up to date
e523adf3d Problem: new monitor events missing from docs
7a7c776ab Problem: trailing whitespace in include/zmq.h
d49b0fad6 Merge pull request #2840 from ccpaging/master
700d7cd14 Merge pull request #2839 from bluca/linger_test
e8ad51e62 Clean code for Visual Studio 2008 compiler
741e5c3db Problem: debian builds ignore test failures hiding issues
de8f14adf Problem: test_security_{zap|curve} often hangs
d2b698502 Merge pull request #2833 from bluca/stream_test_parallel
cffc1c4d2 Merge pull request #2832 from ebyrob/fix-doc-zmq_msg_init-zmq_recv
d7926d6d5 Change zmq_recv to zmg_msg_recv since zmq_msg_t is only used with the zmg_msg_recv style 

--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -46,10 +46,16 @@ override_dh_auto_configure:
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 ifneq ($(DO_TEST), no)
-	-dh_auto_test -- VERBOSE=1
+	dh_auto_test -- VERBOSE=1
 else
 	-dh_auto_test -- VERBOSE=1
 endif
+endif
+
+override_dh_auto_install:
+	dh_auto_install
+ifneq ("$(wildcard debian/zmq.hpp)","")
+	cp $(CURDIR)/debian/zmq.hpp $(CURDIR)/debian/tmp/usr/include/
 endif
 
 override_dh_strip:
