--- a/configure.ac
+++ b/configure.ac
@@ -41,9 +41,10 @@ AC_SUBST(PACKAGE_VERSION)
 # ZeroMQ version 4.2.1: 6:1:1 (ABI version 5)
 # ZeroMQ version 4.2.2: 6:2:1 (ABI version 5)
 # ZeroMQ version 4.2.3: 6:3:1 (ABI version 5)
+# ZeroMQ version 4.2.4: 6:4:1 (ABI version 5)
 #
 # libzmq -version-info current:revision:age
-LTVER="6:3:1"
+LTVER="6:4:1"
 AC_SUBST(LTVER)
 
 # Take a copy of original flags
