--- a/configure.ac
+++ b/configure.ac
@@ -43,10 +43,11 @@ AC_SUBST(PACKAGE_VERSION)
 # ZeroMQ version 4.2.3: 6:3:1 (ABI version 5)
 # ZeroMQ version 4.2.4: 6:4:1 (ABI version 5)
 # ZeroMQ version 4.2.5: 6:5:1 (ABI version 5)
-# ZeroMQ version 4.3.1: 6:6:1 (ABI version 5)
+# ZeroMQ version 4.3.0: 7:0:2 (ABI version 5)
+# ZeroMQ version 4.3.1: 7:1:2 (ABI version 5)
 #
 # libzmq -version-info current:revision:age
-LTVER="6:6:1"
+LTVER="7:1:2"
 AC_SUBST(LTVER)
 
 # Take a copy of original flags
@@ -108,6 +109,7 @@ AC_RUN_IFELSE(
             memset(&topsrv, 0, sizeof(topsrv));
             topsrv.family = AF_TIPC;
             topsrv.addrtype = TIPC_ADDR_NAME;
+            topsrv.addr.name.domain = tipc_addr (10, 10, 10);
             topsrv.addr.name.name.type = TIPC_TOP_SRV;
             topsrv.addr.name.name.instance = TIPC_TOP_SRV;
             fcntl(sd, F_SETFL, O_NONBLOCK);
@@ -165,7 +167,6 @@ libzmq_on_cygwin="no"
 libzmq_on_android="no"
 libzmq_on_linux="no"
 libzmq_on_gnu="no"
-libzmq_on_debian_kfreebsd="no"
 
 # Set some default features required by ZeroMQ code
 CPPFLAGS="-D_REENTRANT -D_THREAD_SAFE $CPPFLAGS"
@@ -220,12 +221,6 @@ case "${host_os}" in
         ;;
     *freebsd*)
         # Define on FreeBSD to enable all library features
-        case "${host_os}" in
-            # On Debian/kFreeBSD with gnu set the --version-script flag
-            kfreebsd*-gnu*)
-                libzmq_on_debian_kfreebsd="yes"
-            ;;
-        esac
         CPPFLAGS="-D__BSD_VISIBLE $CPPFLAGS"
         AC_DEFINE(ZMQ_HAVE_FREEBSD, 1, [Have FreeBSD OS])
         ;;
@@ -631,10 +626,13 @@ AM_CONDITIONAL(ON_CYGWIN, test "x$libzmq_on_cygwin" = "xyes")
 AM_CONDITIONAL(ON_ANDROID, test "x$libzmq_on_android" = "xyes")
 AM_CONDITIONAL(ON_LINUX, test "x$libzmq_on_linux" = "xyes")
 AM_CONDITIONAL(ON_GNU, test "x$libzmq_on_gnu" = "xyes")
-AM_CONDITIONAL(ON_DEBIAN_KFREEBSD, test "x$libzmq_on_debian_kfreebsd" = "xyes")
 
 # Check for __atomic_Xxx compiler intrinsics
 AC_LANG_PUSH([C++])
+AX_CHECK_COMPILE_FLAG([-Wno-atomic-alignment],
+    [CXXFLAGS+=" -Wno-atomic-alignment"],
+    [],
+    [-Werror])
 LIBZMQ_CHECK_ATOMIC_INTRINSICS([
     AC_DEFINE([ZMQ_HAVE_ATOMIC_INTRINSICS],
               [1],
