Squashed 'deps/libzmq/' changes from bd6fa4bbb3..645df4e602
645df4e602 Merge pull request #3449 from sigiesec/migrate-security-tests
17c47da01c Merge pull request #3452 from jacquesg/strnlen
b26542bbfc Problem: strnlen may not be available
c1d2e71861 Merge pull request #3451 from jacquesg/devpoll
04f5ae20af Problem: Solaris 10 had unknown, active users
8759d20d4b Problem: tests link to two different flavours of the runtime library, causing heap corruption
ae1bc03e9e Problem: artifacts published on appveyor are missing pdb files
8a2296711d Problem: epoll_t no longer requires _worker
212ab4f834 Problem: /dev/poll doesn't compile
36a16ec7d1 Problem: test_security_plain not using a test framework
223ef516b6 Problem: test_security_null not using a test framework

git-subtree-dir: deps/libzmq
git-subtree-split: 645df4e602c3b6547c117161401fbb24fc8efee0

--- a/Makefile.am
+++ b/Makefile.am
@@ -419,7 +419,8 @@ test_apps = \
 	tests/test_unbind_wildcard \
 	tests/test_ctx_options \
 	tests/test_ctx_destroy \
-	tests/test_security_null \
+        tests/test_security_no_zap_handler \
+        tests/test_security_null \
 	tests/test_security_plain \
 	tests/test_security_zap \
 	tests/test_iov \
@@ -598,11 +599,17 @@ tests_test_ctx_destroy_SOURCES = tests/test_ctx_destroy.cpp
 tests_test_ctx_destroy_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_ctx_destroy_CPPFLAGS = ${UNITY_CPPFLAGS}
 
+tests_test_security_no_zap_handler_SOURCES = tests/test_security_no_zap_handler.cpp
+tests_test_security_no_zap_handler_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_security_no_zap_handler_CPPFLAGS = ${UNITY_CPPFLAGS}
+
 tests_test_security_null_SOURCES = tests/test_security_null.cpp
-tests_test_security_null_LDADD = src/libzmq.la
+tests_test_security_null_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_security_null_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_security_plain_SOURCES = tests/test_security_plain.cpp
-tests_test_security_plain_LDADD = src/libzmq.la
+tests_test_security_plain_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_security_plain_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_security_zap_SOURCES = \
 	tests/test_security_zap.cpp \
