Squashed 'deps/libzmq/' changes from 9bb197e030..2e9b2f8843
2e9b2f8843 Merge pull request #3696 from bluca/relicense
a43f03316e Add grant by MongoDB, Inc.
8fe620901f Merge pull request #3690 from ipechorin/master
598d9babf6 Add relicense grant
4ebe92333e Merge pull request #3687 from trya/fix_conflate
2fe9dd9101 Problem: ZMQ_CONFLATE on PUB sockets delivers to only one subscriber at most
38b485dd75 Merge pull request #3685 from trya/relicensing
f24c019ec1 Merge pull request #3686 from trya/doc_sock_block
45e1fc059b Add relicense grant
4378d71247 Problem: Documentation about socket blocking on send operations is incorrect
8d34332ff2 Merge pull request #3683 from dimpase/patch-1
3290faa8e6 relicense by dimpase
a25e3168bb Allow "configure --disable-maintainer-mode"
d76664017c Merge pull request #3681 from TobiSchluter/bugfix/dont_include_winsock2
38d144731d Add relicensing file
cb211e4f1e Problem: inclusion of winsock2.h leads to ordering issues in user code.
3ecaf9fe6e Merge pull request #3680 from bluca/nss_pkg
bd5220c505 Problem: nss package has different name on SUSE
9b4deeffdb Merge pull request #3679 from bluca/nss_pkg
3e4c90bbf4 Problem: package build fails on SUSE Tumbleweed
79535f39ca Problem: there are already many Travis builds
5dd433501f Problem: packages are not build with nss
9acdafb001 Problem: spec file includes libsodium-devel twice
adf348b667 Merge pull request #3677 from somdoron/sha1_conflict
2fb9e93cfa problem: ci doesn't build with nss
9be8334938 problem: sha1 external module conflict with czmq
e756743a12 Merge pull request #3674 from herbrechtsmeier/relicense
f505e02988 RELICENSE: add grant from Stefan Herbrechtsmeier
be0f52fe57 Merge pull request #3673 from jcfr/relicense-jcfr
0858038367 Merge pull request #3672 from bluca/relicense
a643e58902 Relicense granby by RPGillespie6
064d5438e6 Merge pull request #3671 from somdoron/ws_protocol
52e0d965b3 problem: ws_engine doesn't check Sec-WebSocket-Protocol
df1bec03c0 Merge pull request #3670 from so

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ matrix:
         - libsodium-dev
         - asciidoc
         - xmlto
-  - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled GSSAPI=enabled PGM=enabled NORM=enabled TIPC=enabled
+  - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled GSSAPI=enabled PGM=enabled NORM=enabled TIPC=enabled USE_NSS=yes
     os: linux
     addons:
       apt:
@@ -82,6 +82,7 @@ matrix:
         - libnorm-dev
         - libpgm-dev
         - libsodium-dev
+        - libnss3-dev
   - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled
     os: osx
   - env: BUILD_TYPE=default CURVE=tweetnacl DRAFT=enabled ADDRESS_SANITIZER=enabled
