Squashed 'deps/libzmq/' changes from c7e99cdc4..3c13e9222
3c13e9222 Merge pull request #3851 from gummif/gfa/ts-int
e1fc84141 Problem: ZMQ_THREAD_SAFE is not bool
323420c5e Merge pull request #3850 from JSYoo5B/git-ignore-fix-track
eceaaf360 Problem: executable sources are not tracked
876d4bfea Merge pull request #3849 from ferdnyc/zeromq-config-install
a97158aa2 Add relicensing statement for ferdnyc
31569c78d Problem: CMake config doesn't support multiarch
bb9135da4 Merge pull request #3847 from JSYoo5B/protocol-literals-refactor
38fd1fdc8 Problem: some cond. compile may cause problem
4f436ce00 Problem: some conditional compile was not applied
ebd22ecf8 Problem: literals protocol names still remains
0c7ee438a Merge pull request #3848 from JSYoo5B/optimize-gitignore
2478887d4 Problem: gitignore is messed up
656205b5f Merge pull request #3844 from bluca/format
f9417dab4 Problem: msg_t functions do not respect coding style
07d368762 Merge pull request #3843 from JSYoo5B/man-udp-not-mentioned
ded0d83e4 Problem: wildcard address with udp not mentioned
296beecd2 Problem: UDP is not mentioned in bind and connect
f91597165 Merge pull request #3838 from JSYoo5B/osx-build-doc-issue
87f9e377d Problem: building on OS X may failed
2206cb37e ip_resolver_t: Silencing C++-warning -Wnon-virtual-dtor (#3837)
de0102e92 Fixes old Simon being in there
99cf1c2e9 Fixes tabs
c0abfae0d Add relicense
0d4292919 Adds QNX as possible to compile on
e765143b4 Merge pull request #3833 from bluca/news
4f45ac135 Problem: formatting not up to date
09476b3d7 Problem: NEWS out of date with latest changes
e2de3b798 Problem: no NEWS entry for ZMQ_RECONNECT_STOP
debbe08fb add option to stop trying to reconnect on ECONNREFUSED (#3831)
66ee3ee46 Merge pull request #3832 from stac47/fix_unused_variable
f0b0e80da Fix unused-variable warning in perf/proxy_thr.cpp

git-subtree-dir: deps/libzmq
git-subtree-split: 3c13e9222d0c5d0b16fed955a20fc7cf7d6de37a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1513,8 +1513,9 @@ endif()
 if(WIN32)
   set(ZEROMQ_CMAKECONFIG_INSTALL_DIR "CMake" CACHE STRING "install path for ZeroMQConfig.cmake")
 else()
-  # GNUInstallDirs "DATADIR" wrong here; CMake search path wants "share".
-  set(ZEROMQ_CMAKECONFIG_INSTALL_DIR "share/cmake/${PROJECT_NAME}" CACHE STRING "install path for ZeroMQConfig.cmake")
+  # CMake search path wants either "share" (AKA GNUInstallDirs DATAROOTDIR)
+  # for arch-independent, or LIBDIR for arch-dependent, plus "cmake" as prefix
+  set(ZEROMQ_CMAKECONFIG_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" CACHE STRING "install path for ZeroMQConfig.cmake")
 endif()
 
 if((NOT CMAKE_VERSION VERSION_LESS 3.0) AND (BUILD_SHARED OR BUILD_STATIC))
