Squashed 'deps/libzmq/' changes from 3c13e9222..718ad8ab9
718ad8ab9 add wss transport and fix tipc tests when building using cmake on linux (#3857)
7276b6809 Merge pull request #3868 from gummif/gfa/poller-sleep
ef4bb9aa5 Merge pull request #3865 from gummif/gfa/poller-fd-init
458d805eb Problem: poller sleeps forever if no events
a468ac782 Problem: poller item fd uninitialized
7b1fef28f Problem: boilerplate when init msg from data copy (#3860)
347ff07c9 Merge pull request #3862 from gummif/gfa/poller-formatting
fa2af05d4 Problem: Strange zmq_poller doc formatting
ae45ac4e1 Merge pull request #3861 from gummif/gfa/send-doc
cbdf07565 Problem: zmq_send doc does not match declaration

git-subtree-dir: deps/libzmq
git-subtree-split: 718ad8ab96f6224ac792888ec360ec7fc070f06d

--- a/builds/cmake/platform.hpp.in
+++ b/builds/cmake/platform.hpp.in
@@ -59,14 +59,19 @@
 #cmakedefine ZMQ_USE_BUILTIN_SHA1
 #cmakedefine ZMQ_USE_NSS
 #cmakedefine ZMQ_HAVE_WS
+#cmakedefine ZMQ_HAVE_WSS
+#cmakedefine ZMQ_HAVE_TIPC
 
 #cmakedefine ZMQ_HAVE_OPENPGM
 #cmakedefine ZMQ_MAKE_VALGRIND_HAPPY
 
+#cmakedefine ZMQ_BUILD_DRAFT_API
 #cmakedefine ZMQ_HAVE_CURVE
 #cmakedefine ZMQ_USE_TWEETNACL
 #cmakedefine ZMQ_USE_LIBSODIUM
 #cmakedefine SODIUM_STATIC
+#cmakedefine ZMQ_USE_GNUTLS
+#cmakedefine ZMQ_USE_RADIX_TREE
 
 #ifdef _AIX
   #define ZMQ_HAVE_AIX
