Squashed 'deps/libzmq/' changes from 718ad8ab9..d882e807d
d882e807d Merge pull request #3876 from somdoron/HELLO_MSG
08d94d0e1 Merge pull request #3877 from gummif/gfa/spinlock-fix
6ca07a30e problem: checking the wrong socket when sending hello msg
2745ac31d Merge pull request #3875 from bluca/test
ff8008993 Problem: Spinning on atomics can cause hangs
5a78bad2a Problem: coverage CI job fails
7cac73401 Problem: test_many_sockets always fails on Windows
ada6f0c05 Merge pull request #3871 from somdoron/DISCONNECT_MSG
7ce7b8b88 Merge pull request #3874 from shgalym/patch-1
d0b571370 typo fix root README
97a52af24 Merge pull request #3872 from gummif/gfa/poller-size
9c6738bb4 Problem: No support to query poller size
81444136d problem: router doesn't know when peer disconnected
4c1d720a4 Merge pull request #3870 from somdoron/HELLO_MSG
93da6763b problem: ZMQ_HEARTBEAT is not useful without sending an hello message

git-subtree-dir: deps/libzmq
git-subtree-split: d882e807dd3125e8edece749de04ee403b30d2ab

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ matrix:
     dist: precise
   - env: BUILD_TYPE=coverage CURVE=tweetnacl DRAFT=enabled
     os: linux
+    dist: xenial
     addons:
       apt:
         packages:
