dist.ini: switch plugin author bundles

--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,8 @@ license = Perl_5
 copyright_holder = Jacques Germishuys
 copyright_year   = 2017
 
-[@Author::ALEXBIO]
+[@Author::JACQUESG]
 repo      = p5-ZMQ-Raw
-makemaker = 0
 
 [Prereqs / ConfigureRequires]
 perl = 5.008
