--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,10 @@ license = Perl_5
 copyright_holder = Jacques Germishuys
 copyright_year   = 2017
 
+; authordep Pod::Coverage::TrustPod
+; authordep Devel::Cover::Report::Coveralls
+; authordep Dist::Zilla::App::Command::cover
+
 [@Author::JACQUESG]
 repo      = p5-ZMQ-Raw
 
