Squashed 'deps/libzmq/' changes from c8b141d964..61c7ae0610
61c7ae0610 Merge pull request #3976 from bluca/fuzzers
734d6e4870 Problem: we have to send a PR to oss-fuzz on every build change on the fuzzers
4dd504abeb Merge pull request #3973 from bluca/fuzzers
1cfd41c064 update sanitizer support - enable undefined behavior sanitizer - force release mode for sanitizer builds
c8e3dfca90 Merge pull request #3974 from somdoron/pthread_cond_timedwait
fb852fd3e7 problem: pthread_cond_timedwait sometimes fail with EINVAL
350b4b34f4 Problem: test_security_zap occasionally segfaults
d78ecb8dc8 Merge pull request #3968 from bluca/fuzzers
218655e4f7 Merge pull request #3969 from serg06/patch-3
f03b67a50b Fix zmq_poller.txt
5c5e279108 Problem: test_req_relaxed occasionally fails
ff9efa106e Merge pull request #3967 from bluca/fuzzers
859f39b302 Problem: OBS build on sid fails
1ddfeb56ec Problem: formatting errors
c04f6581e0 rebase reconnect-redux on master (#3960)
c7aef56048 - resolve FPE when ZMQ_RECONNECT_IVL == 0
d0d23446f5 Merge pull request #3962 from sigiesec/fix-clang-tidy-analyze
3135f6b503 Problem: clang-tidy job is failing because package dependencies are outdated
522abc7376 Merge pull request #3959 from bluca/fuzzers
ab301ebf79 Problem: mtrie use of non-tail recursion leads to stack overflow
e0e3ce081e Problem: XPUB treats non-sub/cancel as sub/cancel
b4aa912467 Merge pull request #3958 from bluca/fix_tests
3856027da9 Problem: test_bind_fuzzer does not build on OSX
1d2af8d388 Problem: formatting error in ip.cpp

git-subtree-dir: deps/libzmq
git-subtree-split: 61c7ae06106aa400a8031a0be6a4c776765d8a77

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,18 +29,18 @@ env:
 matrix:
   include:
   - if: type = cron OR (branch =~ analyze$ AND type = push)
-    env: BUILD_TYPE=cmake CLANG_TIDY=/usr/bin/clang-tidy-8 CC=clang-8 CXX=clang++-8
+    env: BUILD_TYPE=cmake CLANG_TIDY=/usr/bin/clang-tidy-10 CC=clang-10 CXX=clang++-10
     os: linux
     compiler: clang
     addons:
       apt:
         sources:
           - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-8
+          - llvm-toolchain-10
         packages:
-          - clang-8
-          - clang-tools-8
-          - clang-tidy-8
+          - clang-10
+          - clang-tools-10
+          - clang-tidy-10
   - env: BUILD_TYPE=default CURVE=tweetnacl IPv6=ON
     os: linux
     dist: precise
