Squashed 'deps/libzmq/' changes from 61c7ae0610..9fe56b175d
9fe56b175d Merge pull request #4023 from bluca/fuzzers
97f8274129 Problem: setsockopt of CURVE key ignores parameter length
8cc56d9f0f Merge pull request #4022 from bluca/fuzzers
5b0956c381 Problem: test_socket_options_fuzzer does not work
2fb04c1018 Problem: ZMQ_METADATA setsockopt ignores length and assumes nUL-terminated string
241240b79f Merge pull request #4020 from bluca/fuzz_options
6386bc13d3 Problem: test_socket_options_fuzzer can pass non-NUL terminated data buffers
36dc251ed0 Merge pull request #4019 from bluca/fuzz_options
b84e164698 Problem: zmq_z85_decode doesn't check its input length
f447169e82 Merge pull request #4018 from bluca/fuzz_options
f43013a7d1 Problem: no fuzz testing for options
eecd796106 Merge pull request #4017 from bluca/news
64a575eede Problem: test_bind_ws_fuzzer needs DRAFT sockets
a4dbdb614e Problem: some platforms do not have strnlen
d40c79cef4 Problem: missing items in NEWS
700fd13cad Merge pull request #4016 from bluca/news
7f1e219d09 Problem: NEWS out of date
29f5ede684 Merge pull request #4013 from bluca/fuzzers
b02bdd566a Problem: ws_engine leaks memory if Sec-WebSocket-Protocol header passed multiple times
d280c44fe0 Merge pull request #4011 from bluca/fuzzers
c733067d6d Problem: use-after-free in WS
1412078db6 Merge pull request #4010 from bluca/fuzzers
110551d5df Problem: formatting errors
1668432894 Problem: WS might use handshake buffer for data
87ee106438 Merge pull request #4009 from benjdero/master
83667099bb Problem: libzmq use outdated Android NDK version
3da6fde592 Problem : if socket is invalid for any reason, as_socket_base_t() will return NULL and 'as_socket_base_t (items_[i].socket)->is_thread_safe ()' will crash (#4004)
5d77cd8118 Merge pull request #4005 from stvales/patch-1
a246b255d3 Create StephaneVales.md
0a424486a0 Modifications to compile code for WINDOWS ARM and ARM64 (#4003)
22e37933b3 Merge pull request #3997 from kaczmarj/enh/dockerfile
131

--- a/configure.ac
+++ b/configure.ac
@@ -143,9 +143,9 @@ if test "x$zmq_militant" = "xyes"; then
     AC_DEFINE(ZMQ_ACT_MILITANT, 1, [Enable militant API assertions])
 fi
 
-# IPC is available on all platforms supported by autotools build at the moment except OpenVMS and VxWorks.
+# Disable IPC on unsupported platforms.
 case "${host_os}" in
-    *vxworks*|*openvms*)
+    *vxworks*|*openvms*|*mingw*)
         ;;
     *)
         AC_DEFINE(ZMQ_HAVE_IPC, 1, [Have AF_UNIX sockets for ipc transport])
@@ -196,7 +196,7 @@ else
     AC_MSG_RESULT([no])
 fi
 
-# By default compiling with -Werror except OSX and on Solaris when building
+# By default compiling with -Werror except on OSX and Solaris when building
 # with libsodium.
 AC_ARG_ENABLE([Werror],
     [AS_HELP_STRING([--disable-Werror], [disable Werror compiler flag [default=enabled]])],
@@ -278,11 +278,7 @@ case "${host_os}" in
         # Define on Darwin to enable all library features
         CPPFLAGS="-D_DARWIN_C_SOURCE $CPPFLAGS"
         libzmq_pedantic="no"
-        libzmq_werror="no"
         AC_DEFINE(ZMQ_HAVE_OSX, 1, [Have DarwinOSX OS])
-        AC_LANG_PUSH([C++])
-        LIBZMQ_CHECK_LANG_FLAG_PREPEND([-Wno-uninitialized])
-        AC_LANG_POP([C++])
         ;;
     *haiku*)
         AC_DEFINE(ZMQ_HAVE_HAIKU, 1, [Have Haiku OS])
@@ -563,11 +559,16 @@ elif test "x$with_libsodium" = "xyes"; then
     curve_library="libsodium"
     enable_curve="yes"
 
-    # On Solaris, libsodium depends on libssp
     case "${host_os}" in
         *solaris*)
+            dnl On Solaris, libsodium depends on libssp
             LDFLAGS="-lssp $LDFLAGS"
             libzmq_pedantic="no"
+            libzmq_werror="no"
+        ;;
+        *darwin*)
+            dnl On Darwin, building with libsodium causes
+            dnl macro redefinition warnings
             libzmq_werror="no"
         ;;
     esac
@@ -751,7 +752,7 @@ AM_CONDITIONAL(ON_GNU, test "x$libzmq_on_gnu" = "xyes")
 
 # Check for __atomic_Xxx compiler intrinsics
 AC_LANG_PUSH([C++])
-AX_CHECK_COMPILE_FLAG([-Wno-atomic-alignment],
+AX_CHECK_COMPILE_FLAG([-Watomic-alignment],
     [CXXFLAGS+=" -Wno-atomic-alignment"],
     [],
     [-Werror])
@@ -1053,12 +1054,12 @@ AM_CONDITIONAL(FUZZING_ENGINE_LIB, test "x$FUZZING_ENGINE_LIB" != "x")
 
 # clang 6 has a warning that does not make sense on multi-platform code
 AC_LANG_PUSH([C])
-AX_CHECK_COMPILE_FLAG([-Wno-tautological-constant-compare],
+AX_CHECK_COMPILE_FLAG([-Wtautological-constant-compare],
     [CFLAGS+=" -Wno-tautological-constant-compare"],
     [],
     [-Werror])
 AC_LANG_POP([C])
-AX_CHECK_COMPILE_FLAG([-Wno-tautological-constant-compare],
+AX_CHECK_COMPILE_FLAG([-Wtautological-constant-compare],
     [CXXFLAGS+=" -Wno-tautological-constant-compare"],
     [],
     [-Werror])
